# mysql-haskell

./: .envrc  .ghcid  .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  cabal.project  default.nix  flake.nix  mysql-haskell.cabal  mysql-pure.cabal  shell-ghc-8-10.nix  shell-ghc-9-0.nix  shell.nix  stack.yaml
.github/workflows/: cabal.yaml  ci.yaml  nightly.yaml  nix.yaml  stack.yaml
Data/Binary/Parser/: Char8.hs  Numeric.hs  Word8.hs
Database/MySQL/: Base.hs  BinLog.hs  BinLogProtocol.hs  Connection.hs  MySQLValue.hs  OpenSSL.hs  Param.hs  Protocol.hs  Query.hs  Result.hs  TLS.hs  UnixSocket.hs
Database/MySQL/BinLogProtocol/: BinLogEvent.hs  BinLogMeta.hs  BinLogValue.hs  BinlogEvent.hs
Database/MySQL/BinLogProtocol2/: BinLogMeta.hs  BinlogEvent.hs
Database/MySQL/BinlogProtocol/: BinLogValue.hs  BinlogEvent.hs
Database/MySQL/Protocol/: Auth.hs  ColumnDef.hs  Command.hs  Escape.hs  Field.hs  MySQLValue.hs  Packet.hs
benchmark/: MySQLHaskell.hs  MySQLHaskellPrepared.hs  MySQLHaskellVector.hs  README.md  bench.sh  libmysql  libmysql.c  libmysql.cpp  libmysql_prepared.cpp  mysql-haskell-bench.cabal  result.numbers
benchmark/insert/: MySQLHaskell.hs  MySQLHaskellInsertMany.hs  MySQLHaskellPrepared.hs  MySQLHaskellUnixSocket.hs  bench.sh  insert.sql  libmysql.cpp  mysql-haskell-bench.cabal
benchmark/select/: MySQLFFI.hs  MySQLHaskell.hs  MySQLHaskellOpenSSL.hs  MySQLHaskellPrepared.hs  MySQLHaskellTLS.hs  MySQLHaskellUnixSocket.hs  bench-nossl-noffi.sh  bench.sh  libmysql.cpp  libmysql_prepared.cpp  mysql-haskell-bench.cabal
binary-parser-bench/: Aeson.hs  AesonBP.hs  Bench.hs  Common.hs  HttpReq.hs
binary-parser-bench/Network/Wai/Handler/Warp/: ReadInt.hs
binary-parser-tests/: Main.hs
binary-parser-tests/QC/: ByteString.hs  Combinator.hs
cbits/: escape.c
mysql-haskell-openssl/: ChangeLog.md  mysql-haskell-openssl.cabal
mysql-haskell-openssl/Database/MySQL/: OpenSSL.hs
nix/: ci.nix  hpkgs.nix  mk-shell.nix  pkgs.nix  sources.json
npins/: sources.json
src/Data/: Connection.hs  TLSSetting.hs
src/Data/Binary/: Parser.hs
src/Data/Binary/Parser/: Numeric.hs
src/Data/Int/: Int24.hs
src/Data/Word/: Word24.hs
src/Database/MySQL/: Base.hs  BinLog.hs  Connection.hs  TLS.hs
src/Database/MySQL/BinLogProtocol/: BinLogEvent.hs  BinLogMeta.hs  BinLogValue.hs
src/Database/MySQL/Protocol/: Auth.hs  ColumnDef.hs  Command.hs  Escape.hs  MySQLValue.hs  Packet.hs
src/System/IO/Streams/: Binary.hs  TCP.hs  TLS.hs  UnixSocket.hs
tcp-streams-bench/: TCPLoopBack.hs  UnixSocketLoopBack.hs  tcp-streams-bench.cabal
test/: Aeson.hs  AesonBP.hs  BinLog.hs  BinLogNew.hs  BinaryRow.hs  BinaryRowNew.hs  BoundsCheck.hs  CachingSha2.hs  ExecuteMany.hs  Integration.hs  JSON.hs  Main.hs  MysqlTests.hs  QCUtils.hs  RoundtripBit.hs  RoundtripYear.hs  SelectOne.hs  Sha1Scramble.hs  Sha256Scramble.hs  TCPStreams.hs  TLSConnection.hs  TextProtocol.hs  TextRow.hs  TextRowNew.hs  UnixSocket.hs  WireStreams.hs  Word24.hs
test/QC/: ByteString.hs  Combinator.hs  Common.hs
test/cert/: ca-key.pem  ca.pem  server-cert.pem  server-key.pem  server-req.pem
wire-streams-bench/: Main.hs
wire-streams-bench/System/IO/Streams/: Cereal.hs
word24-bench/: Benchmark.hs
