name:               mysql-haskell
version:            0.8.4.3
synopsis:           pure haskell MySQL driver
description:        pure haskell MySQL driver
license:            BSD3
license-file:       LICENSE
author:             winterland1989
maintainer:         winterland1989@gmail.com
copyright:          (c) 2016 Winterland
category:           Database
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

cabal-version:      >=1.10
homepage:           https://github.com/winterland1989/mysql-haskell
bug-reports:        https://github.com/winterland1989/mysql-haskell/issues

source-repository head
  type:     git
  location: git://github.com/winterland1989/mysql-haskell.git

library
  exposed-modules:
    Database.MySQL.Base
    Database.MySQL.BinLog
    Database.MySQL.BinLogProtocol.BinLogEvent
    Database.MySQL.BinLogProtocol.BinLogMeta
    Database.MySQL.BinLogProtocol.BinLogValue
    Database.MySQL.Connection
    Database.MySQL.Protocol.Auth
    Database.MySQL.Protocol.ColumnDef
    Database.MySQL.Protocol.Command
    Database.MySQL.Protocol.Escape
    Database.MySQL.Protocol.MySQLValue
    Database.MySQL.Protocol.Packet
    Database.MySQL.TLS

  other-modules:      Database.MySQL.Query
  build-depends:
      base               >=4.7      && <5
    , binary             >=0.8.3
    , binary-ieee754
    , binary-parsers     >=0.2.1
    , blaze-textual      >=0.2      && <0.3
    , bytestring         >=0.10.2.0
    , bytestring-lexing  >=0.5      && <0.6
    , cryptonite         <1
    , io-streams         >=1.2      && <2.0
    , memory             >=0.14.4   && <0.19
    , monad-loops        >=0.4      && <0.5
    , network            >=2.3      && <4.0
    , scientific         >=0.3      && <0.4
    , tcp-streams        >=1.0      && <1.1
    , text               >=1.1      && <1.3
    , time               >=1.5.0
    , tls                >=1.3.5    && <1.6
    , vector             >=0.8
    , wire-streams       >=0.1
    , word24             >=1.0      && <3.0.0

  default-language:   Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    MultiWayIf
    OverloadedStrings

  ghc-options:        -Wall

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    BinaryRow
    BinaryRowNew
    BinLog
    BinLogNew
    ExecuteMany
    TextRow
    TextRowNew

  hs-source-dirs:     test
  build-depends:
      base
    , bytestring
    , io-streams
    , mysql-haskell
    , tasty          >=0.11 && <2.0
    , tasty-hunit
    , text
    , time
    , vector

  default-extensions:
    MultiWayIf
    OverloadedStrings

  ghc-options:        -threaded
  default-language:   Haskell2010
