cabal-version:      2.2
name:               mysql-pure
version:            1.0.1
synopsis:           pure haskell MySQL driver
description:        pure haskell MySQL driver.
license:            BSD-3-Clause
license-file:       LICENSE
author:             winterland1989
maintainer:         hi@jappie.me
copyright:          (c) 2016 Winterland
category:           Database
build-type:         Simple
extra-doc-files:    ChangeLog.md
extra-source-files:
  README.md
  test/json-data/buffer-builder.json
  test/json-data/dates-fract.json
  test/json-data/dates.json
  test/json-data/example.json
  test/json-data/geometry.json
  test/json-data/integers.json
  test/json-data/jp10.json
  test/json-data/jp100.json
  test/json-data/jp50.json
  test/json-data/numbers.json
  test/json-data/twitter1.json
  test/json-data/twitter10.json
  test/json-data/twitter100.json
  test/json-data/twitter20.json
  test/json-data/twitter50.json

homepage:           https://github.com/jappeace/mysql-pure
bug-reports:        https://github.com/jappeace/mysql-pure/issues

source-repository head
  type:     git
  location: git://github.com/jappeace/mysql-pure.git

library
  exposed-modules:
    Data.Binary.Parser
    Data.Binary.Parser.Char8
    Data.Binary.Parser.Numeric
    Data.Binary.Parser.Word8
    Data.Int.Int24
    Data.Word.Word24
    Database.MySQL.Base
    Database.MySQL.BinLog
    Database.MySQL.BinLogProtocol.BinLogEvent
    Database.MySQL.BinLogProtocol.BinLogMeta
    Database.MySQL.BinLogProtocol.BinLogValue
    Database.MySQL.Connection
    Database.MySQL.Protocol.Auth
    Database.MySQL.Protocol.ColumnDef
    Database.MySQL.Protocol.Command
    Database.MySQL.Protocol.Escape
    Database.MySQL.Protocol.MySQLValue
    Database.MySQL.Protocol.Packet
    Database.MySQL.TLS
    System.IO.Streams.Binary

  hs-source-dirs:     src
  other-modules:      Database.MySQL.Query
  build-depends:
    , base               >=4.7      && <4.19.0
    , binary             >=0.8.3    && <0.9
    , binary-ieee754     >=0.1.0    && <0.2
    , blaze-textual      >=0.2      && <0.3
    , bytestring         >=0.10.2.0 && <0.12
    , bytestring-lexing  >=0.5      && <0.6
    , crypton            >=0.31     && <0.40
    , deepseq            >=1.4.6    && <1.5
    , io-streams         >=1.2      && <2.0
    , memory             >=0.14.4   && <0.19
    , monad-loops        >=0.4      && <0.5
    , network            >=2.3      && <4.0
    , scientific         >=0.3      && <0.4
    , tcp-streams        >=1.0      && <1.1
    , text               >=1.1      && <2.1
    , time               >=1.5.0    && <1.12
    , tls                >=1.3.5    && <1.7
    , vector             >=0.8      && <0.13
    , word-compat        >=0.0      && <0.1

  default-language:   Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    MultiWayIf
    OverloadedStrings

  ghc-options:        -Wall

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Aeson
    AesonBP
    BinaryRow
    BinaryRowNew
    BinLog
    BinLogNew
    ExecuteMany
    JSON
    MysqlTests
    QC.ByteString
    QC.Combinator
    QC.Common
    QCUtils
    TextRow
    TextRowNew
    WireStreams
    Word24

  hs-source-dirs:     test
  build-depends:
    , attoparsec
    , base
    , binary                >=0.8
    , bytestring            >=0.10
    , bytestring-lexing     >=0.5
    , containers
    , deepseq
    , directory
    , filepath
    , io-streams
    , mysql-pure
    , QuickCheck            >=2.7
    , quickcheck-instances
    , scientific            >=0.3.0
    , tasty                 >=0.11  && <2.0
    , tasty-hunit
    , tasty-quickcheck      >=0.8
    , text
    , time
    , unordered-containers
    , vector

  default-extensions:
    MultiWayIf
    OverloadedStrings

  ghc-options:        -threaded
  default-language:   Haskell2010

benchmark binary-parsers-bench
  other-modules:
    Aeson
    AesonBP
    Common
    HttpReq
    Network.Wai.Handler.Warp.ReadInt
    Network.Wai.Handler.Warp.RequestHeader

  build-depends:
    , attoparsec
    , base
    , binary
    , bytestring
    , case-insensitive
    , criterion             >=1.1 && <1.2
    , deepseq
    , directory
    , filepath
    , http-types
    , mysql-pure
    , scanner
    , scientific
    , text
    , unordered-containers
    , vector

  default-language: Haskell2010
  hs-source-dirs:   binary-parser-bench
  main-is:          Bench.hs
  type:             exitcode-stdio-1.0
  ghc-options:      -O2

benchmark bench-wirestream
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    System.IO.Streams.Cereal
  hs-source-dirs:   wire-streams-bench
  default-language: Haskell2010
  build-depends:
    , base
    , binary
    , bytestring
    , cereal
    , cereal-conduit
    , conduit
    , conduit-extra
    , criterion       >=1.0.2.0
    , io-streams
    , mysql-pure
    , transformers

  ghc-options:      -rtsopts -Wall

benchmark bench24
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   word24-bench
  main-is:          Benchmark.hs
  build-depends:
    , base
    , criterion  >=1.1
    , deepseq    >=1.2 && <2
    , word24

  ghc-options:      -O2
