name:                mysql-haskell-openssl
version:             0.8.3.0
synopsis:            TLS support for mysql-haskell package using openssl
description:         TLS support for mysql-haskell package using openssl
license:             BSD3
license-file:        LICENSE
author:              winterland1989
maintainer:          winterland1989@gmail.com
copyright:           (c) 2016 Winterland       
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
homepage:            https://github.com/winterland1989/mysql-haskell
bug-reports:         https://github.com/winterland1989/mysql-haskell/issues

source-repository head
  type:     git
  location: git://github.com/winterland1989/mysql-haskell.git

library
    exposed-modules: Database.MySQL.OpenSSL
    build-depends:      base          >= 4.7 && < 5
                    ,   binary        >= 0.8.3
                    ,   tcp-streams   >= 1.0 && < 1.1
                    ,   tcp-streams-openssl  >= 1.0 && < 1.1
                    ,   wire-streams  >= 0.1
                    ,   mysql-haskell >= 0.8.3 && < 0.8.4
                    ,   HsOpenSSL      >=0.10.3 && <0.12

    default-language:    Haskell2010
    default-extensions:     DeriveDataTypeable
                        ,   DeriveGeneric
                        ,   MultiWayIf
                        ,   OverloadedStrings
    ghc-options:       -Wall
